Endringer etter flytting av arena-adapter